fix: fix button align issue

--- a/src/theme/theme-dp-ui/src/button.scss
+++ b/src/theme/theme-dp-ui/src/button.scss
@@ -1,9 +1,10 @@
 .el-button {
   height: 28px;
-  //   min-width: 59px;
   text-align: justify;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   > span {
-    display: inline-block;
     min-width: 33px;
     text-align: justify;
     text-align-last: justify;
